tests/NormalTests/paczka1/small_fuzzy/24987915.err
Error in line 1: TYwhgTWqXUj A977 68,4
Error in line 2: jB9Z3 S980 9,8
